--- a/page1.phtml
+++ b/page1.phtml
@@ -17,16 +17,21 @@
       <main>
         <div class="container-main">
           <p class="text-white">
-            Você NAO DESARMOU A BOMBA A TEMPO E INFELIZMENTE A CIDADE DE Utashinai FOI DESIMADA E AGORA A CULTURA CYBERPUNK SE FORTALECE AINDA MAIS DOMIANDO OUTRAS CIDADES!</p>
+            A cidade de Utashinai, situada no coração desse mundo distópico, tornou-se o epicentro de uma crise explosiva. 
+            Uma série de ataques com bombas ameaça a segurança de seus habitantes, e nem a polícia nem o exército são capazes 
+            de detê-los a tempo. A falta de especialistas em desarmamento de bombas leva as autoridades a recorrerem a você, 
+            um renomado especialista em tecnologia e um ex-militar experiente.
           </p>
-          <div class="d-flex  justify-content-center  mt-5">
-            <a href="index.phtml" class="btn btn-danger mx-5">Home</a>
-            
-           
-          </div>
+          <div class="d-flex justify-content-center mt-5">
+            <a href="index.phtml" class="btn btn-sm btn-danger mx-3">Back</a>
+            <a href="page2.phtml" class="btn btn-sm btn-danger mx-3">Next</a>
+          </div>  
         </div>
       </main>
-             
+        
+        
+
+        
     </div><!-- Fim container -->
 
     <footer class="text-center fixed-bottom pb-5 m-0 ps-3">
@@ -34,6 +39,11 @@
     </footer>
 
 
+
+
+
+
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
