--- a/index.phtml
+++ b/index.phtml
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
+    <audio autoplay>
+    <source src="audio/japanese-beat.mp3" type="audio/mp3">
+  </audio>
     <div class="container-body">
       <header>
             <h1>Defuse the bomb</h1>
@@ -17,16 +20,20 @@
       <main>
         <div class="container-main">
           <p class="text-white">
-            Você NAO DESARMOU A BOMBA A TEMPO E INFELIZMENTE A CIDADE DE Utashinai FOI DESIMADA E AGORA A CULTURA CYBERPUNK SE FORTALECE AINDA MAIS DOMIANDO OUTRAS CIDADES!</p>
+            Em 2099 a cultura cyberpunk dominou as ruas e as casas das cidades do continente oriental
+            e o grande número de adolescente implementando bombas caseiras até mesmo profissonais cresceram
+            drasticamente em um curto espaço de tempo.  
+            Será que você está preparado para encarar está história e desarmar a bomba a tempo?
           </p>
-          <div class="d-flex  justify-content-center  mt-5">
-            <a href="index.phtml" class="btn btn-danger mx-5">Home</a>
-            
-           
+          <div class="d-flex justify-content-center mt-5">
+            <a href="page1.phtml" class="btn  btn-sm btn-danger mx-5">Start</a>
           </div>
         </div>
       </main>
-             
+      
+        
+
+        
     </div><!-- Fim container -->
 
     <footer class="text-center fixed-bottom pb-5 m-0 ps-3">
@@ -34,6 +41,10 @@
     </footer>
 
 
+
+
+  
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
