--- a/page3.phtml
+++ b/page3.phtml
@@ -17,13 +17,14 @@
       <main>
         <div class="container-main">
           <p class="text-white">
-            Você NAO DESARMOU A BOMBA A TEMPO E INFELIZMENTE A CIDADE DE Utashinai FOI DESIMADA E AGORA A CULTURA CYBERPUNK SE FORTALECE AINDA MAIS DOMIANDO OUTRAS CIDADES!</p>
+            À medida que você mergulha nas entranhas da cidade, desvendando os mistérios por trás dos ataques, 
+            você descobre uma teia complexa de conspirações e interesses escusos. Há aqueles que se beneficiam 
+            do caos e estão determinados a garantir que as bombas explodam, custe o que custar.
           </p>
-          <div class="d-flex  justify-content-center  mt-5">
-            <a href="index.phtml" class="btn btn-danger mx-5">Home</a>
-            
-           
-          </div>
+          <div class="d-flex justify-content-center mt-5">
+            <a href="page2.phtml" class="btn btn-sm btn-danger mx-3">Back</a>
+            <a href="page4.phtml" class="btn btn-sm btn-danger mx-3">Next</a>
+          </div>   
         </div>
       </main>
              
@@ -33,7 +34,7 @@
       2099
     </footer>
 
-
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
