--- a/page4.phtml
+++ b/page4.phtml
@@ -17,13 +17,14 @@
       <main>
         <div class="container-main">
           <p class="text-white">
-            Você NAO DESARMOU A BOMBA A TEMPO E INFELIZMENTE A CIDADE DE Utashinai FOI DESIMADA E AGORA A CULTURA CYBERPUNK SE FORTALECE AINDA MAIS DOMIANDO OUTRAS CIDADES!</p>
+          Enquanto desarma as bombas, você é confrontado com quebra-cabeças complexos, dispositivos de segurança sofisticados 
+          e a pressão constante do tempo. Cada escolha que você faz e cada ação que realiza tem consequências profundas para 
+          o destino de Utashinai e de seus habitantes.
           </p>
-          <div class="d-flex  justify-content-center  mt-5">
-            <a href="index.phtml" class="btn btn-danger mx-5">Home</a>
-            
-           
-          </div>
+          <div class="d-flex justify-content-center mt-5">
+            <a href="page3.phtml" class="btn btn-sm btn-danger mx-3">Back</a>
+            <a href="page5.phtml" class="btn btn-sm btn-danger mx-3">Next</a>
+          </div>   
         </div>
       </main>
              
@@ -32,7 +33,7 @@
     <footer class="text-center fixed-bottom pb-5 m-0 ps-3">
       2099
     </footer>
-
+    <script src="js/script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
